fix: footer overlapping

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,6 @@ body {
 }
 
 footer {
-  position: fixed;
   bottom: 0;
   padding: 16px;
   font-size: 16px;
